--- a/React/my-app/package.json
+++ b/React/my-app/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fetch-mock": "^7.3.9",
+    "mockjs": "^1.0.1-beta3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
@@ -27,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.0.1"
+  },
+  "homepage": "."
 }
