--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-.project
-.classpath
-/bib/
-/bin/
-.settings
-webpacklearn/node_modules
-webpacklearn/dist
-React/CodeStorage.lnk
+java/.classpath
+java/.project
+java/.settings/org.eclipse.core.resources.prefs
+java/.settings/org.eclipse.jdt.core.prefs
+java/.settings/org.eclipse.m2e.core.prefs
+.gitignore
+.gitignore
