jks获取证书签名验签

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ java/.settings/org.eclipse.core.resources.prefs
 java/.settings/org.eclipse.jdt.core.prefs
 java/.settings/org.eclipse.m2e.core.prefs
 .gitignore
+/java/target
