--- a/java/pom.xml
+++ b/java/pom.xml
@@ -25,6 +25,45 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.57</version>
-        </dependency>	
+        </dependency>
+        
+        <dependency>
+	    	<groupId>com.itextpdf</groupId>
+	 	    <artifactId>itextpdf</artifactId>
+	    	<version>5.5.13.3</version>
+		</dependency>
+<!-- 		       <dependency> -->
+<!-- 	    	<groupId>com.itextpdf</groupId> -->
+<!-- 	 	    <artifactId>itextpdf</artifactId> -->
+<!-- 	    	<version>7.1.11</version> -->
+<!-- 		</dependency> -->
+
+        <dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.41</version>
+		</dependency>
+		
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpcore</artifactId>
+		<version>4.4.10</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.5.6</version>
+	</dependency>
+<dependency>
+   <groupId>org.bouncycastle</groupId>
+   <artifactId>bcprov-jdk15on</artifactId>
+   <version>1.61</version>
+</dependency>
   </dependencies>
 </project>
