--- a/java/pom.xml
+++ b/java/pom.xml
@@ -72,6 +72,11 @@
 		<artifactId>httpclient</artifactId>
 		<version>4.5.6</version>
 	</dependency>
+	        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.1</version>
+        </dependency>
 <dependency>
    <groupId>org.bouncycastle</groupId>
    <artifactId>bcprov-jdk15on</artifactId>
