--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
         <!-- 	 	    <artifactId>itextpdf</artifactId> -->
         <!-- 	    	<version>7.1.11</version> -->
         <!-- 		</dependency> -->
-
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
@@ -97,6 +101,11 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.61</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.61</version>
         </dependency>
         <dependency>
